Add tests
Signed-off-by: Rishab Nahata <rnnahata@amazon.com>